fix(theme): dropdown menu partially hidden by the homepage footer when it is too long

--- a/src/client/theme-default/styles/vars.css
+++ b/src/client/theme-default/styles/vars.css
@@ -257,11 +257,10 @@
 
 :root {
   --vp-z-index-local-nav: 10;
-  --vp-z-index-nav: 20;
-  --vp-z-index-layout-top: 30;
+  --vp-z-index-footer: 20;
+  --vp-z-index-nav: 30;
   --vp-z-index-backdrop: 40;
   --vp-z-index-sidebar: 50;
-  --vp-z-index-footer: 60;
 }
 
 /**
